--- a/styles/main.css
+++ b/styles/main.css
@@ -56,3 +56,11 @@ html {
   html { font-size: 120%; }
 
 }
+
+.clearfix::after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
