--- a/styles/landing.css
+++ b/styles/landing.css
@@ -40,9 +40,19 @@ The prefixes with names in dashes, like -webkit-, are known as vendor prefixes.
 
 .point {
 
-    position: relative
+    position: relative;
     padding: 2rem;
     text-align: center;
+    opacity: 0;
+    -webkit-transform: scaleX(0.9) translateY(3rem);
+    -moz-transform: scaleX(0.9) translateY(3rem);
+    transform: scaleX(0.9) translateY(3rem);
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
+    -webkit-transition-delay: 0.2s;
+    -moz-transition-delay: 0.2s;
+    transition-delay: 0.4s;
 }
 
 .point .point-title {
