--- a/styles/player_bar.css
+++ b/styles/player_bar.css
@@ -3,7 +3,7 @@
      bottom: 0;
      left: 0;
      right: 0;
-     height: 200px;
+     height: 150px;
      background-color: rgba(255, 255, 255, 0.3);
      z-index: 100;
  }
@@ -54,6 +54,30 @@
      position: relative;
  }
 
+ .player-bar .currently-playing .song-name,
+.player-bar .currently-playing .artist-name,
+.player-bar .currently-playing .artist-song-mobile {
+    text-align: center;
+    font-size: 0.75rem;
+    margin: 0;
+    position: absolute;
+    width: 100%;
+    font-weight: 300;
+}
+
+.player-bar .currently-playing .song-name,
+.player-bar .currently-playing .artist-song-mobile {
+    top: 1.1rem;
+}
+
+.player-bar .currently-playing .artist-name {
+    bottom: 1.1rem;
+}
+
+.player-bar .currently-playing .artist-song-mobile {
+    display: none;
+}
+
  seek-control {
       position: relative;
       font-size: 0.8rem;
@@ -97,9 +121,7 @@
       margin-top: -0.25rem;
       border-radius: 50%;
       cursor: pointer;
-      -webkit-transition: all 100ms ease-in-out;
-         -moz-transition: all 100ms ease-in-out;
-              transition: width 100ms ease-in-out,
+      transition: width 100ms ease-in-out,
                   height 100ms ease-in-out,
                   margin-top 100ms ease-in-out,
                   margin-left 100ms ease-in-out;
